# pyproject

./: .example-input.yml  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_ACTUAL.md  TODO.md  copier.yml  mise.toml  pyproject.toml  renovate.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: release-drafter.yml
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md
.github/workflows/: cd.yml  ci.yml
example/: .codecov.yml  .copier-answers.yml  .dockerignore  .editorconfig  .markdownlint-cli2.jsonc  .markdownlint.json  .pre-commit-config.yaml  .release-it.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  mkdocs.yml  pyproject.toml
example/.devcontainer/: devcontainer.json  docker-compose.yml
example/.github/: FUNDING.yml  release-drafter.yml
example/.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
example/.github/workflows/: cd.yml  ci.yml  gh-pages.yml  greetings.yml  manual.yml  stale.yml
example/src/example/: __init__.py  __main__.py  app.py  cli.py  config.py  gui.py  logging_setup.py
example/tests/: __init__.py  test_cli.py  test_gui.py  test_main.py  test_web.py
src/projectname/: __init__.py  __main__.py  cli.py  config.py  logging_setup.py
src/theproject/: __init__.py  __main__.py  cli.py  config.py  logging_setup.py
template/: .codecov.yml  .dockerignore  .gitignore.jinja  .pre-commit-config.yaml  CHANGELOG.md.jinja  CODE_OF_CONDUCT.md.jinja  CONTRIBUTING.md.jinja  Dockerfile.jinja  LICENSE.jinja  README.md.jinja  mkdocs.yml.jinja  pants.toml  pyproject.toml.jinja  release-please-config.json
template/.github/: FUNDING.yml.jinja  actionlint.yaml  labeler.yml  release-drafter.yml.jinja
template/.github/ISSUE_TEMPLATE/: bug-report.md.jinja  feature-request.md.jinja
template/.github/PULL_REQUEST/: pull_request_template.md
template/.github/linters/: .cspell.yml
template/.github/workflows/: cd.yml.jinja  check-pr-title.yml  check-pr-title.yml.jinja  ci.yml.jinja  codeql.yml  first-interaction.yml  gh-pages.yml  label.yml  manual.yml  release-drafter.yml.jinja  release-please.yml  stale.yml
template/.trunk/: trunk.yaml
template/.zed/: debug.json  debug.json.jinja
template/src/{{github_repo_name}}/: __init__.py.jinja  __main__.py.jinja  app.py.jinja  cli.py.jinja  config.py.jinja  gui.py.jinja  logging_setup.py.jinja
template/tests/: __init__.py.jinja  test_cli.py.jinja  test_gui.py.jinja  test_main.py.jinja  test_web.py.jinja
tests/: __init__.py  test_main.py
