[project]
name = "projectname"
description = "A Python CLI tool and library template."
license = "MIT"
readme = "README.md"
# TODO @hasansezertasan: Update the author name and email
authors = [{ name = "Hasan Sezer Taşan", email = "hasansezertasan@gmail.com" }]
# TODO @hasansezertasan: Update the maintainer name and email
maintainers = [
  { name = "Hasan Sezer Taşan", email = "hasansezertasan@gmail.com" },
]
dynamic = ["version"]
# TODO @hasansezertasan: Update the keywords
keywords = ["command-line", "cli", "package", "metadata", "pypi", "python"]
# TODO @hasansezertasan: Fill in classifiers
classifiers = [
  "Development Status :: 1 - Planning",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Python",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development",
  "Topic :: Terminals",
  "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = []


[project.optional-dependencies]
cli = ["typer>=0.19.2"]


[project.urls]
changelog = "https://github.com/hasansezertasan/projectname/blob/main/CHANGELOG.md"
documentation = "https://github.com/hasansezertasan/projectname#readme"
homepage = "https://github.com/hasansezertasan/projectname"
issues = "https://github.com/hasansezertasan/projectname/issues"
releasenotes = "https://github.com/hasansezertasan/projectname/releases"
source = "https://github.com/hasansezertasan/projectname.git"


[project.scripts]
projectname = "projectname.cli:app"


[dependency-groups]
dev = [
  "projectname[cli]",
  "tox==4.31.0",
  "tox-uv==1.29.0",
  { include-group = "lint" },
  { include-group = "test" },
  { include-group = "tool" },
]
lint = [
  "mypy==1.18.2",
  "pyright==1.1.406",
  "ty==0.0.1a23",
  "pyrefly==0.38.1",
  "ruff==0.14.1",
  "taplo==0.9.3",
  "typos==1.38.1",
  "validate-pyproject[all]==0.24.1",
  "vulture==2.14",
  "slotscheck==0.19.1",
]
test = [
  "coverage-enable-subprocess==1.0",
  "coverage[toml]==7.4",
  "pytest-dependency==0.6.0",
  "pytest-mock==3.12",
  "pytest-rerunfailures==16.1",
  "pytest-xdist[psutil]==3.5",
  "pytest==8.4.2",
]
tool = [
  "pre-commit==4.3.0",
  "poethepoet==0.37.0",
  "commitizen==4.9.1",
]


[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { git = { commit = true, tags = true } },
]
trusted-publishing = "always"
add-bounds = "exact"


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0"


[tool.hatch.build]
hooks.vcs.version-file = "src/projectname/_version.py"


[tool.hatch.version.raw-options]
version_scheme = "only-version"
local_scheme = "no-local-version"

# TODO @hasansezertasan: Commitizen should be optional.
[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "scm"
version_scheme = "pep404"
tag_format = "$version"
update_changelog_on_bump = true
major_version_zero = true


[tool.pytest.ini_options]
addopts = "-v --tb=short"
testpaths = ["tests"]


[tool.coverage.run]
source_pkgs = ["projectname", "tests"]
branch = true
parallel = true
omit = ["src/projectname/_version.py"]


[tool.coverage.paths]
projectname = ["src/projectname", "*/projectname/src/projectname"]
tests = ["tests", "*/projectname/tests"]


[tool.coverage.report]
# fail_under = 99
# omit = ["src/**/_version.py"]
# show_missing = true
# skip_covered = true
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]


[tool.vulture]
ignore_decorators = ["@app.command"]
min_confidence = 60
paths = ["src", "tests"]


[tool.slotscheck]
strict-imports = false


[tool.ruff]
fix = true
output-format = "full"
preview = true
show-fixes = true
src = ["src", "tests", "examples"]
target-version = "py310"
unsafe-fixes = true


[tool.ruff.analyze]
detect-string-imports = true
preview = true


[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
preview = true


[tool.ruff.lint]
fixable = ["ALL"]
ignore = ["COM812", "CPY", "FIX", "TD"]
logger-objects = ["logging_setup.logger"]
preview = true
select = ["ALL"]


# TODO @hasansezertasan: Update the author name and email
[tool.ruff.lint.flake8-copyright]
author = "Hasan Sezer Taşan <hasansezertasan@gmail.com>"


[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"


[tool.ruff.lint.mccabe]
max-complexity = 5


[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true


[tool.ruff.lint.pydocstyle]
convention = "pep257"


[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ['S101']


[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true


[tool.ruff.lint.ruff]
parenthesize-tuple-in-subscript = true


[tool.mypy]
files = ["src"]
pretty = true
python_version = "3.10"
show_error_codes = true
strict = true


[tool.pyright]
include = ["src/projectname"]


[tool.ty.src]
include = ["src", "tests"]
respect-ignore-files = false


[tool.ty.environment]
python-version = "3.10"


[tool.ty.terminal]
error-on-warning = true


[tool.pyrefly]
python-version = "3.10"
project-includes = ["src"]


# TODO @hasansezertasan: poethepoet should be optional.
[tool.poe]
executor.type = "uv"


[tool.poe.tasks.test]
help = "Run tests"
cmd = "tox run"


[tool.poe.tasks.style]
help = "Run Style"
cmd = "tox run -e style"


[tool.poe.tasks.pypi-readme]
help = "Generate Fancy PyPI README"
shell = "hatch-fancy-pypi-readme -o PyPI.md && open PyPI.md"


[tool.tox]
env_list = ["style", "run", "3.14", "3.13", "3.12", "3.11", "3.10"]
requires = ["tox>=4"]


[tool.tox.env_run_base]
commands = [
  [
    "pytest",
    "-v",
    "--tb=short",
    "--basetemp={env_tmp_dir}",
    { replace = "posargs", default = [
    ], extend = true },
  ],
]
constrain_package_deps = true
dependency_groups = ["test"]
description = "Run the tests under {base_python}"
env_tmp_dir = "{toxworkdir}/tmp/{envname}"
package = "wheel"
runner = "uv-venv-runner"
use_frozen_constraints = true
wheel_build_env = ".pkg"
extras = ["cli"]


[tool.tox.env.style]
base_python = ["3.10"]
commands = [
  ["ruff", "check"],
  ["ruff", "format"],
  ["mypy", "--python-version", "3.10"],
  ["mypy", "--python-version", "3.14"],
  ["pyright"],
  ["ty", "check"],
  ["pyrefly", "check"],
  ["vulture"],
  # ["slotscheck", "src"],
  ["taplo", "lint"],
  ["taplo", "format"],
  ["validate-pyproject", "pyproject.toml"],
  ["typos", "--diff"],
  # ["actionlint"],
  # ["yamlfmt", "."],
]
runner = "uv-venv-runner"
dependency_groups = ["lint"]
description = "Run Linters and Formatters"
allowlist_externals = ["actionlint", "yamlfmt"]


# TODO @hasansezertasan: This should be available if the project is a CLI project.
[tool.tox.env.run]
commands = [["projectname", "version", { replace = "posargs", extend = true }]]
description = "Run the application"
